tests/baselines/reference/for-of14.errors.txt
for-of14.ts(8,11): error TS2488: Type 'MyStringIterator' must have a '[Symbol.iterator]()' method that returns an iterator.


==== for-of14.ts (1 errors) ====
    class MyStringIterator {
        next() {
            return "";
        }
    }
    
    var v: string;
    for (v of new MyStringIterator) { } // Should fail because the iterator is not iterable
              ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MyStringIterator' must have a '[Symbol.iterator]()' method that returns an iterator.